# ai_project_crypto_predictors

./: .gitignore  LICENCE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
conf/base/: catalog.yml
dags/: kedro_dag.py
data/model_input/: test.csv  train.csv  val.csv
data/primary/: scaled_data.csv
data/reporting/: automl_metrics.json  baseline_metrics.json  best_model.pkl  custom_metrics.json  model_comparison.json
docs/: airflow_report.md  eda_report.md  modeling_report.md  preprocessing_report.md  webapp_report.md
frontend/: app.py
notebooks/: EDA_ai_project_crypto_predictors.ipynb  models_metrics.ipynb
src/ai-project-crypto-predictors/: pyproject.toml
src/ai-project-crypto-predictors/src/ai_project_crypto_predictors/: __init__.py  __main__.py  settings.py
src/ai_project_crypto_predictors/: pipeline_registry.py  settings.py
src/ai_project_crypto_predictors/pipelines/eda/: nodes.py  pipeline.py
src/ai_project_crypto_predictors/pipelines/modeling/: nodes.py  pipeline.py
src/ai_project_crypto_predictors/pipelines/preprocessing/: nodes.py  pipeline.py
src/tests/pipelines/preprocessing/: test_nodes.py
tests/: test_api.py
