[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "ai_project_crypto_predictors"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
ai-project-crypto-predictors = "ai_project_crypto_predictors.__main__:main"

[tool.kedro]
package_name = "ai_project_crypto_predictors"
project_name = "ai_project_crypto_predictors"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "ai_project_crypto_predictors.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
